--- a/package.json
+++ b/package.json
@@ -2,17 +2,16 @@
   "name": "near-paper-wallet-web",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "near-paper": "^0.1.3",
     "qrcode.react": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "react-st-modal": "^1.1.3",
-    "web-vitals": "^1.0.1"
+    "react-st-modal": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
